[package]
name = "ero"
version = "0.12.1"
authors = ["Alexey Voznyuk <me@swizard.info>"]
description = "Erlang-inspired framework for organizing async code in a fault-tolerant way"
edition = "2018"

[dependencies]
log = "0.4"
futures = "^0.3"
tokio = { version = "^0.2", features = ["full"] }

[dev-dependencies]
pretty_env_logger = "0.2"
