[package]
name = "ero"
version = "0.14.6"
authors = ["Alexey Voznyuk <me@swizard.info>"]
description = "Erlang-inspired framework for organizing async code in a fault-tolerant way"
license = "MIT"
repository = "https://github.com/swizard0/ero"
edition = "2021"

[dependencies]
log = "0.4"
futures = "^0.3"
tokio = { version = "^1", features = ["full"] }

[dev-dependencies]
pretty_env_logger = "0.5"
